# WASTE-APP

./: .gitignore  CMakeLists.txt  Driver.cpp  GarbageCollectionFacility.cpp  GarbageCollectionFacility.h  Graph.cpp  Graph.h  GraphLoader.cpp  GraphLoader.h  MapPoint.cpp  MapPoint.h  Menu.cpp  Menu.h  README.md  README.md.backup  README.txt  TrashContainer.cpp  TrashContainer.h  User.cpp  User.h  main.cpp
Map/: garbageFacilitys.txt  houses.txt  index.txt  processedEdges.txt  processedNodes.txt  t02_tags_porto.txt  trashContainers.txt
Map/outputKosaraju/: processedEdges.txt  processedNodes.txt
Map/outputTarjan/: processedEdges.txt
Map/testSCC/: testEdges.txt  testNodes.txt
data/: cars.txt  drivers.txt  garbageFacilitys.txt  houses.txt  trashContainers.txt  users.txt
lib/GraphViewerCpp/: CMakeLists.txt
src/: main.cpp
src/Algorithms/: Analysis.cpp  Analysis.h  Clustering.cpp  Clustering.h  Preprocessing.cpp  Preprocessing.h  Routing.cpp  Routing.h
src/Elements/: APP.cpp  APP.h  App.cpp  App.h  Car.cpp  Car.h  Driver.cpp  Driver.h  GarbageCollectionFacility.cpp  GarbageCollectionFacility.h  House.cpp  House.h  Initializing.cpp  Initializing.h  TrashContainer.cpp  TrashContainer.h  User.cpp  User.h
src/Graph/: Graph.cpp  Graph.h  MutablePriorityQueue.h
src/GraphViewer/: GraphView.cpp  GraphView.h
src/UI/: Menu.cpp  Menu.h  MenuDriver.cpp  MenuDriver.h  MenuProgrammer.cpp  MenuProgrammer.h  MenuUser.cpp  MenuUser.h  UI.cpp  UI.h
src/Utils/: GraphLoader.h
src/Waste-App/: Car.cpp  Driver.h  House.h
